# Snippets

C/: Makefile
C++/ConstructorInitializationList/: CMakeLists.txt
C++/ConstructorInitializationList/code/: CMakeLists.txt  CtorInitList.cpp  CtorInitList.hpp  main.cpp
C++/CopyConstructor/: CMakeLists.txt
C++/CopyConstructor/code/: CMakeLists.txt  CopyCtor.cpp  CopyCtor.hpp  main.cpp
C++/DeepCopy/: CMakeLists.txt
C++/DeepCopy/code/: CMakeLists.txt  DeepCopy.cpp  DeepCopy.hpp  main.cpp
C++/DelegatingConstructors/: CMakeLists.txt
C++/DelegatingConstructors/code/: CMakeLists.txt  DelegatingCtors.cpp  DelegatingCtors.hpp  main.cpp
C++/LambdaExpressions/: main.cpp
C++/Module_Template/: Template.cpp  Template.hpp  Template_Config.cpp  Template_Config.hpp
C++/MoveConstructors/: CMakeLists.txt
C++/MoveConstructors/code/: CMakeLists.txt  MoveCtors.cpp  MoveCtors.hpp  main.cpp
C++/Notes/CodeStyle/: GoogleCodeStyle.txt
C++/Notes/RuleOfFive/: main.cpp
C++/OverloadingOperators/: CMakeLists.txt
C++/OverloadingOperators/code/: CMakeLists.txt  OverloadingOps.cpp  OverloadingOps.hpp  main.cpp
C/Module_Template/: Template.c  Template.h  Template_Config.c  Template_Config.h
C/Software_Modules/Queue/: Queue.c  Queue.h  Queue_Config.c  Queue_Config.h  System_Header.h
